--- a/index.html
+++ b/index.html
@@ -2,9 +2,215 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header content-section">
+      <!-- шапка меню -->
+
+      <nav class="menu">
+        <ul class="menu_list">
+          <li class="menu_list-item menu_list-item-activity">
+            <a class="menu_list-link-activity" href="/">главная</a>
+          </li>
+          <li class="menu_list-item">
+            <a class="menu_list-link" href="/">посмотреть лоты</a>
+          </li>
+          <li class="menu_list-item">
+            <a class="menu_list-link" href="/">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+
+      <!-- логотип в центре шапки -->
+
+      <a class="header_logo" href="/">
+        <img class="header_logo-image" src="./images/logo.svg" alt="Логотип" />
+      </a>
+
+      <!-- адрес-лист в шапке -->
+      <div class="container_header_address_list">
+        <address class="header_address_list">
+          <ul class="header_address_list">
+            <li class="address_list-item">
+              <a class="address_list-link" href="tel:+70000000"
+                >+9 999 555 5555
+              </a>
+            </li>
+            <li class="address_list-item">
+              <a class="address_list-link" href="mailto:mail@example.com"
+                >info@sobaka.ge
+              </a>
+            </li>
+            <li>наб. Принсенграхт 263-</li>
+            <li>265, Амстердам</li>
+          </ul>
+        </address>
+      </div>
+    </header>
+
+    <!-- ковер главная -->
+
+    <main>
+      <section class="cover content-section">
+        <div class="overlay"></div>
+        <h1 class="cover_title">
+          <span class="accent-span left-word">оно</span>
+          <span class="accent-span center-word">тебе</span>
+          <span class="accent-span right-word">надо</span>
+        </h1>
+        <div class="description">
+          <h2 class="description_title">
+            Аукцион вещей, в которые никто не верил
+          </h2>
+          <button class="bet_button">сделать ставку</button>
+        </div>
+      </section>
+
+      <!-- секция лоты -->
+
+      <section class="lots content-section">
+        <h2 class="lots_heading">лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item card_type_film">
+            <a class="card-link" href="/">
+              <div class="overlay"></div>
+              <article class="card card-film">
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item card_type_book">
+            <a class="card-link" href="/">
+              <div class="overlay"></div>
+              <article class="card card-book">
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item card_type_picture">
+            <a class="card-link" href="/">
+              <div class="overlay"></div>
+              <article class="card card-picture">
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a class="lots__look-more-link" href="/"> посмотреть больше </a>
+      </section>
+
+      <!-- секция об аукционе -->
+
+      <section class="about content-section">
+        <div class="about__column">
+        <div class="about__logo">
+          <img class="about__logo-image" src="./images/about-logo.png" alt="логотип секции о аукционе" />
+        </div>
+        <div class="about-text-title">
+          <h1 class="about__title">Об аукционе</h1>
+          <p class="about__text about__text-p1">
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </p>
+          <p class="about__text">
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря <p class="about__text">на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+          </p>
+        </div>
+      </div>
+      </section>
+    </main>
+
+    <!-- футер меню -->
+
+    <footer class="footer content-section">
+      <address class="address_list">
+        <ul class="footer_address_list">
+        <li class="address_list-item">
+          <a class="address_list-link" href="tel:+70000000"
+            >+9 999 555 5555
+          </a>
+        </li>
+        <li class="address_list-item">
+          <a class="address_list-link" href="mailto:mail@example.com"
+            >info@sobaka.ge
+          </a>
+        </li>
+        <li>наб. Принсенграхт 263-265</li>
+        <li>Амстердам</li>
+      </ul>
+      </address>
+
+      <nav>
+        <ul class="footer_menu_list">
+          <li class="footer_menu_list-item">
+            <a class="menu_list-link-activity" href="/">главная</a>
+          </li>
+          <li class="menu_list-item">
+            <a class="menu_list-link" href="/">посмотреть лоты</a>
+          </li>
+          <li class="menu_list-item">
+            <a class="menu_list-link" href="/">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+
+      <!-- футер ссылки ютуб вк пинтерест -->
+
+      <ul class="footer-links">
+        <li class="">
+          <a href="">
+            <img src="./images/YouTube.png" alt="" />
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/VK.png" alt="" />
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/Pinterest.png" alt="" />
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
