--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <title>Document</title>
+    <title>ono-tebe-nado</title>
   </head>
   <body>
     <header class="header content-section">
@@ -133,28 +133,35 @@
 
       <section class="about content-section">
         <div class="about__column">
-        <div class="about__logo">
-          <img class="about__logo-image" src="./images/about-logo.png" alt="логотип секции о аукционе" />
+          <div class="about__logo">
+            <img
+              class="about__logo-image"
+              src="./images/about-logo.png"
+              alt="логотип секции о аукционе"
+            />
+          </div>
+          <div class="about-text-title">
+            <h1 class="about__title">Об аукционе</h1>
+            <p class="about__text about__text-p1">
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+              на один аукцион. Потому что кому нужен дневник девочки-подростка
+              или картина, которую может нарисовать даже ребёнок? Кому нужны все
+              эти странные вещи, созданные любителями?
+            </p>
+            <p class="about__text">
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В пух и прах растерзанные критиками. Непринятые и
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+            </p>
+            <p class="about__text">
+              на критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда в эти
+              вещи не верил никто, продолжали верить их создатели. И сейчас эти
+              лоты стали культовыми.
+            </p>
+          </div>
         </div>
-        <div class="about-text-title">
-          <h1 class="about__title">Об аукционе</h1>
-          <p class="about__text about__text-p1">
-            Здесь вы не встретите очередное пафосное собрание невероятно
-            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
-            один аукцион. Потому что кому нужен дневник девочки-подростка или
-            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
-            странные вещи, созданные любителями?
-          </p>
-          <p class="about__text">
-            Слишком сложные или, наоборот, слишком простые. Опережающие своё
-            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то они казались просто неудачными. Но, несмотря <p class="about__text">на критику,
-            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
-            представить современную культуру. Когда в эти вещи не верил никто,
-            продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
-          </p>
-        </div>
-      </div>
       </section>
     </main>
 
@@ -163,19 +170,19 @@
     <footer class="footer content-section">
       <address class="address_list">
         <ul class="footer_address_list">
-        <li class="address_list-item">
-          <a class="address_list-link" href="tel:+70000000"
-            >+9 999 555 5555
-          </a>
-        </li>
-        <li class="address_list-item">
-          <a class="address_list-link" href="mailto:mail@example.com"
-            >info@sobaka.ge
-          </a>
-        </li>
-        <li>наб. Принсенграхт 263-265</li>
-        <li>Амстердам</li>
-      </ul>
+          <li class="address_list-item">
+            <a class="address_list-link" href="tel:+70000000"
+              >+9 999 555 5555
+            </a>
+          </li>
+          <li class="address_list-item">
+            <a class="address_list-link" href="mailto:mail@example.com"
+              >info@sobaka.ge
+            </a>
+          </li>
+          <li>наб. Принсенграхт 263-265</li>
+          <li>Амстердам</li>
+        </ul>
       </address>
 
       <nav>
