--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <title>ono-tebe-nado</title>
+    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
     <header class="header content-section">
@@ -14,8 +14,10 @@
 
       <nav class="menu">
         <ul class="menu_list">
-          <li class="menu_list-item menu_list-item-activity">
-            <a class="menu_list-link-activity" href="/">главная</a>
+          <li class="menu_list-item header__links-list-item_no-bullit">
+            <a class="menu_list-link menu_list-link-activity" href="/"
+              >главная</a
+            >
           </li>
           <li class="menu_list-item">
             <a class="menu_list-link" href="/">посмотреть лоты</a>
@@ -28,14 +30,14 @@
 
       <!-- логотип в центре шапки -->
 
-      <a class="header_logo" href="/">
+      <a class="header_logo">
         <img class="header_logo-image" src="./images/logo.svg" alt="Логотип" />
       </a>
 
       <!-- адрес-лист в шапке -->
       <div class="container_header_address_list">
-        <address class="header_address_list">
-          <ul class="header_address_list">
+        <address class="address_list">
+          <ul class="address_list">
             <li class="address_list-item">
               <a class="address_list-link" href="tel:+70000000"
                 >+9 999 555 5555
@@ -46,8 +48,7 @@
                 >info@sobaka.ge
               </a>
             </li>
-            <li>наб. Принсенграхт 263-</li>
-            <li>265, Амстердам</li>
+            <li>наб. Принсенграхт 263-265, Амстердам</li>
           </ul>
         </address>
       </div>
@@ -64,10 +65,10 @@
           <span class="accent-span right-word">надо</span>
         </h1>
         <div class="description">
-          <h2 class="description_title">
+          <p class="description_title">
             Аукцион вещей, в которые никто не верил
-          </h2>
-          <button class="bet_button">сделать ставку</button>
+          </p>
+          <button type="button" class="bet_button">сделать ставку</button>
         </div>
       </section>
 
@@ -79,7 +80,7 @@
           <li class="lots__card-list-item card_type_film">
             <a class="card-link" href="/">
               <div class="overlay"></div>
-              <article class="card card-film">
+              <article class="card">
                 <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
                 </h3>
@@ -94,7 +95,7 @@
           <li class="lots__card-list-item card_type_book">
             <a class="card-link" href="/">
               <div class="overlay"></div>
-              <article class="card card-book">
+              <article class="card ">
                 <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
@@ -112,7 +113,7 @@
           <li class="lots__card-list-item card_type_picture">
             <a class="card-link" href="/">
               <div class="overlay"></div>
-              <article class="card card-picture">
+              <article class="card">
                 <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
@@ -141,8 +142,8 @@
             />
           </div>
           <div class="about-text-title">
-            <h1 class="about__title">Об аукционе</h1>
-            <p class="about__text about__text-p1">
+            <h3 class="about__title">Об аукционе</h3>
+            <p class="about__text">
               Здесь вы не встретите очередное пафосное собрание невероятно
               дорогого антиквариата. Наши лоты вообще не должны были попасть ни
               на один аукцион. Потому что кому нужен дневник девочки-подростка
@@ -153,8 +154,6 @@
               Слишком сложные или, наоборот, слишком простые. Опережающие своё
               время. В пух и прах растерзанные критиками. Непринятые и
               непонятые. Когда-то они казались просто неудачными. Но, несмотря
-            </p>
-            <p class="about__text">
               на критику, кажущуюся простоту или сложность, сейчас без этих
               лотов невозможно представить современную культуру. Когда в эти
               вещи не верил никто, продолжали верить их создатели. И сейчас эти
@@ -169,19 +168,18 @@
 
     <footer class="footer content-section">
       <address class="address_list">
-        <ul class="footer_address_list">
+        <ul class="address_list">
           <li class="address_list-item">
-            <a class="address_list-link" href="tel:+70000000"
+            <a class="address_list-link" href="tel:+9 999 555 5555"
               >+9 999 555 5555
             </a>
           </li>
           <li class="address_list-item">
-            <a class="address_list-link" href="mailto:mail@example.com"
+            <a class="address_list-link" href="info@sobaka.ge"
               >info@sobaka.ge
             </a>
           </li>
-          <li>наб. Принсенграхт 263-265</li>
-          <li>Амстердам</li>
+          <li>наб. Принсенграхт 263-265 Амстердам</li>
         </ul>
       </address>
 
@@ -202,18 +200,18 @@
       <!-- футер ссылки ютуб вк пинтерест -->
 
       <ul class="footer-links">
-        <li class="">
-          <a href="">
+        <li>
+          <a href="" target="_blank">
             <img src="./images/YouTube.png" alt="" />
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" target="_blank">
             <img src="./images/VK.png" alt="" />
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" target="_blank">
             <img src="./images/Pinterest.png" alt="" />
           </a>
         </li>
