--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
       <address class="address_list">
         <ul class="address_list">
           <li class="address_list-item">
-            <a class="address_list-link" href="tel:+9 999 555 5555"
-              >+9 999 555 5555
+            <a class="address_list-link" href="tel:+9 999 555 5555">
+              +9 999 555 5555
             </a>
           </li>
           <li class="address_list-item">
