--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <li class="lots__card-list-item card_type_book">
             <a class="card-link" href="/">
               <div class="overlay"></div>
-              <article class="card ">
+              <article class="card">
                 <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
@@ -175,8 +175,8 @@
             </a>
           </li>
           <li class="address_list-item">
-            <a class="address_list-link" href="info@sobaka.ge"
-              >info@sobaka.ge
+            <a class="address_list-link" href="info@sobaka.ge">
+              info@sobaka.ge
             </a>
           </li>
           <li>наб. Принсенграхт 263-265 Амстердам</li>
@@ -202,17 +202,17 @@
       <ul class="footer-links">
         <li>
           <a href="" target="_blank">
-            <img src="./images/YouTube.png" alt="" />
+            <img src="./images/YouTube.png" alt="логотип-ссылка на ютуб" />
           </a>
         </li>
         <li>
           <a href="" target="_blank">
-            <img src="./images/VK.png" alt="" />
+            <img src="./images/VK.png" alt="логотип-ссылка на вк" />
           </a>
         </li>
         <li>
           <a href="" target="_blank">
-            <img src="./images/Pinterest.png" alt="" />
+            <img src="./images/Pinterest.png" alt="логотип-ссылка на пинтерест" />
           </a>
         </li>
       </ul>
