--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <address class="address_list">
         <ul class="address_list">
           <li class="address_list-item">
-            <a class="address_list-link" href="tel:+9 999 555 5555">
+            <a class="address_list-link" href="tel:+99995555555">
               +9 999 555 5555
             </a>
           </li>
