--- a/index.html
+++ b/index.html
@@ -212,7 +212,10 @@
         </li>
         <li>
           <a href="" target="_blank">
-            <img src="./images/Pinterest.png" alt="логотип-ссылка на пинтерест" />
+            <img
+              src="./images/Pinterest.png"
+              alt="логотип-ссылка на пинтерест"
+            />
           </a>
         </li>
       </ul>
